--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="#about" onclick="openNav()">About</a></li>
       <li><a href="#experience" onclick="openNav()">Experience</a></li>
       <li><a href="#projects" onclick="openNav()">Projects</a></li>
+      <li><a href="#Hobby" onclick="openNav()">Hobby</a></li>
       <li><a href="#contact" onclick="openNav()">Contact</a></li>
     </div>
   </div>
